Fix arrow icon position on safari

--- a/client/modules/treo-core/css/treo/treo-classic-theme.css
+++ b/client/modules/treo-core/css/treo/treo-classic-theme.css
@@ -22140,9 +22140,10 @@ td[data-name="draggableIcon"] {
     margin-left: -4px;
     color: #8e8e8e;
     font-size: 12px;
-    vertical-align: bottom;
+    vertical-align: top;
     line-height: 0;
     user-select: none;
+    display: inline-block;
 }
 
 .panel-heading > .panel-title > .collapser > svg {
